--- a/ImproveMyPassword/Index.html
+++ b/ImproveMyPassword/Index.html
@@ -2,39 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="Description" content="
+                Password requirements are becoming more complex in order to protect privacy, data
+                and information. As this is a necessity, it also has become strenuous
+                to remember these complex passwords. Due to these password complexities, many people use
+                the same base password for everything. Enter your password and see how your password can be improved">
     <link rel="stylesheet" href="Styles.css">
     <script src="jquery-3.5.1.js"></script>
     <script src="Scrips.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>Improve My Password</title>
+    <title>Improve My Password: A web tool to increase the strength of your Password - BasiliskByte </title>
 </head>
 <body>
 <div id="All_Container">
     <header>
         <br>
-        <br>
         <h1 id="MyTitle">Improve My Password</h1>
-        <br>
-        <P id="Intro_1">
-            Password requirements are becoming more complex in order to protect privacy, data
-            and information. As this a necessity, it also has become strenuous
-            to remember these complex passwords. Due to these password complexities, many people use
-            the same base password for everything.
-        </P>
-        <br>
         <br>
         <br>
     </header>
-
     <div id="Main_Container">
-        <p id="Intro_2">
+        <h3 id="Intro_1">
             Enter your base password in the input box below, and examine the suggested improvements.
-        </p>
+        </h3>
         <br>
         <br>
         <div id="Outer_Password_Box">
-            <input type="text" id="Password_Input" maxlength="30" placeholder="Enter Your Password">
+            <input type="text" id="Password_Input" maxlength="20" placeholder="Enter Your Password">
         </div>
         <br>
         <div id="Results_Box">
@@ -46,7 +41,6 @@
             <p id="S_3"></p>
             <br>
             <br>
-            <p>These suggested passwords are for educational purposes only.</p>
             <br>
             <br>
         </div>
@@ -54,8 +48,9 @@
     <br>
     <br>
     <footer>
+        <p>These suggested passwords are for educational purposes only.</p>
         <p>This site was developed using <a href="https://jquery.com/">jQuery</a>. Click the link to learn more.</p>
-        <p>Improve My Password - Version: 1.0.0</p>
+        <p>Improve My Password - Version: 1.1.0</p>
     </footer>
 
 
