Added New SEO info
Added New SEO info

--- a/ImproveMyPassword/Index.html
+++ b/ImproveMyPassword/Index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="Description" content="
-                Password requirements are becoming more complex in order to protect privacy, data
-                and information. As this is a necessity, it also has become strenuous
-                to remember these complex passwords. Due to these password complexities, many people use
-                the same base password for everything. Enter your password and see how your password can be improved">
+    <meta name="Description" content="Password requirements are crucial to protect privacy, data, and information. Enter your password and see how your password can be improved.">
     <link rel="stylesheet" href="Styles.css">
     <script src="jquery-3.5.1.js"></script>
     <script src="Scrips.js"></script>
+    <link rel=“canonical” href=“http://www.improvemypassword.com/” />
+    <script data-ad-client="ca-pub-1426691684705792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>Improve My Password: A web tool to increase the strength of your Password - BasiliskByte </title>
+    <title>Improve My Password: Increase the strength of your Password</title>
 </head>
 <body>
 <div id="All_Container">
@@ -50,7 +48,7 @@
     <footer>
         <p>These suggested passwords are for educational purposes only.</p>
         <p>This site was developed using <a href="https://jquery.com/">jQuery</a>. Click the link to learn more.</p>
-        <p>Improve My Password - Version: 1.2.0</p>
+        <p>Improve My Password - Version: 1.3.0</p>
     </footer>
 
 
