--- a/ImproveMyPassword/Index.html
+++ b/ImproveMyPassword/Index.html
@@ -1,57 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Browser Data-->
     <meta charset="UTF-8">
-    <meta name="Description" content="Password requirements are crucial to protect privacy, data, and information. Enter your password and see how your password can be improved.">
-    <link rel="stylesheet" href="Styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="">
+    <link rel="stylesheet" href="styles.css">
+    <link rel=“canonical” href="http://www.improvemypassword.com/">
     <script src="jquery-3.5.1.js"></script>
-    <script src="Scrips.js"></script>
-    <link rel=“canonical” href=“http://www.improvemypassword.com/” />
-    <script data-ad-client="ca-pub-1426691684705792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>Improve My Password: Increase the strength of your Password</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="Scrips.js"></script>
+    <title>Base Website Template</title>
 </head>
 <body>
-<div id="All_Container">
-    <header>
-        <br>
-        <h1 id="MyTitle">Improve My Password</h1>
-        <br>
-        <br>
-    </header>
-    <div id="Main_Container">
-        <h3 id="Intro_1">
-            Enter your base password in the input box below, and examine the suggested improvements.
-        </h3>
-        <br>
-        <br>
-        <div id="Outer_Password_Box">
-            <input type="text" id="Password_Input" maxlength="20" placeholder="Enter Your Password">
-        </div>
-        <br>
-        <div id="Results_Box">
-            <p id="Required_Length" hidden>Your base password is too short, please increase it to at least 6 characters!</p>
-            <p id="Password_Suggestions" hidden><u>Password Suggestions</u></p>
-            <br>
-            <p id="S_1"></p>
-            <p id="S_2"></p>
-            <p id="S_3"></p>
-            <br>
-            <br>
-            <br>
-            <br>
+
+     <!--Browser Data-->
+    <div class="topnav">
+        <a class="active" href="#Main-Content">Improve My Password</a>
+        <div class="topnav-right">
+            <a href="#Extra-Content-1">Security</a>
+            <a href="#Extra-Content-2">Hacking</a>
+            <a href="#Extra-Content-3">References</a>
         </div>
     </div>
-    <br>
-    <br>
-    <footer>
+
+    <a name="Main-Content"></a>
+    <div id="Main-Content" class="Content">
+        <h1>Improve My Password</h1>
+        <div id="ImproveMyPassword">
+            <h3 id="Intro_1">
+                Enter your base password in the input box below, and examine the suggested improvements.
+            </h3>
+            <br>
+            <br>
+            <div id="Outer_Password_Box">
+                <input type="text" id="Password_Input" maxlength="20" placeholder="Enter Your Password">
+            </div>
+            <br>
+            <div id="Results_Box">
+                <p id="Required_Length" hidden>Your base password is too short, please increase it to at least 6 characters!</p>
+                <p id="Password_Suggestions" hidden><u>Password Suggestions</u></p>
+                <br>
+                <p id="S_1"></p>
+                <p id="S_2"></p>
+                <p id="S_3"></p>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+        </div>
+    </div>
+
+    <a name="Extra-Content-1"></a>
+    <div id="Extra-Content-1" class="Content">
+        <h3>Security</h3>
+        <p>
+            Having a strong password is vital to keeping your information private. The National Institute of Standards
+            and Technology suggests having longer passwords, with a mix of upper case, lower case, special characters,
+            and numbers. For example, "password" can be improved using these listed password security measures to be
+            "!MyPassworD$". These slight changes in your base password could greatly reduce the chances of having your
+            account hacked.
+        </p>
+    </div>
+
+    <a name="Extra-Content-2"></a>
+    <div id="Extra-Content-2" class="Content">
+        <h3>Hacking</h3>
+    </div>
+
+    <a name="Extra-Content-3"></a>
+    <div id="Extra-Content-3" class="Content">
+        <h3>References</h3>
+    </div>
+
+    <div class="footer">
         <p>These suggested passwords are for educational purposes only.</p>
         <p>This site was developed using <a href="https://jquery.com/">jQuery</a>. Click the link to learn more.</p>
-        <p>Improve My Password - Version: 1.3.0</p>
-    </footer>
+        <p>Improve My Password - Version: 2.0.0</p>
+        <p>Basilisk Byte</p>
+    </div>
 
-
-</div>
 </body>
 </html>
