Updated IMP Content

--- a/ImproveMyPassword/Index.html
+++ b/ImproveMyPassword/Index.html
@@ -21,7 +21,7 @@
         <div class="topnav-right">
             <a href="#Extra-Content-1">Security</a>
             <a href="#Extra-Content-2">Hacking</a>
-            <a href="#Extra-Content-3">References</a>
+            <a href="#footer">References</a>
         </div>
     </div>
 
@@ -55,27 +55,34 @@
 
     <a name="Extra-Content-1"></a>
     <div id="Extra-Content-1" class="Content">
-        <h3>Security</h3>
+        <h1>"The Importance of Strong, Secure Passwords"</h1>
         <p>
-            Having a strong password is vital to keeping your information private. The National Institute of Standards
-            and Technology suggests having longer passwords, with a mix of upper case, lower case, special characters,
-            and numbers. For example, "password" can be improved using these listed password security measures to be
-            "!MyPassworD$". These slight changes in your base password could greatly reduce the chances of having your
-            account hacked.
+            "Unauthorized access is a potentially major problem for anyone who uses a computer or high-tech devices such as smartphones or tablets.
+            The consequences for victims of these break-ins can include the loss of valuable data such as presentations, emails, and music.
+            Victims may also have their bank account information, money, or even their identity stolen. Moreover, unauthorized users may use someone
+            else's computer to break the law, which could put the victim in legal trouble...""
+        </p>
+        <p>
+            <a href="https://www.securedatarecovery.com/resources/the-importance-of-strong-secure-passwords">View Article</a>
         </p>
     </div>
 
     <a name="Extra-Content-2"></a>
     <div id="Extra-Content-2" class="Content">
-        <h3>Hacking</h3>
+        <h1>"18 Ways to Secure Your Devices From Hackers"</h1>
+        <p>
+            "The growth of the World Wide Web in the 1990s introduced new possibilities and spawned new industries, but it also brought about new downsides
+            of connectivity. Tons of spam started to infiltrate email accounts, and computer viruses wreaked havoc on business networks. A new threat known
+            as computer hacking extended the definition of thievery to include infiltrating your computer, stealing personal information, tricking you into 
+            revealing private data, and using that data to steal and extort personal information, such as business secrets, bank account credentials and
+            even people's identities..."
+        </p>
+        <p>
+            <a href="https://www.businessnewsdaily.com/11213-secure-computer-from-hackers.html">View Article</a>
+        </p>
     </div>
 
-    <a name="Extra-Content-3"></a>
-    <div id="Extra-Content-3" class="Content">
-        <h3>References</h3>
-    </div>
-
-    <div class="footer">
+    <div class="footer", id="footer">
         <p>These suggested passwords are for educational purposes only.</p>
         <p>This site was developed using <a href="https://jquery.com/">jQuery</a>. Click the link to learn more.</p>
         <p>Improve My Password - Version: 2.0.0</p>
