--- a/ImproveMyPassword/Index.html
+++ b/ImproveMyPassword/Index.html
@@ -4,12 +4,13 @@
     <!--Browser Data-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="Description" content="Password requirements are crucial to protect privacy, data, and information. Enter your password and see how your password can be improved.">
+    <link rel="stylesheet" href="Styles.css">
     <link rel=“canonical” href="http://www.improvemypassword.com/">
     <script src="jquery-3.5.1.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script data-ad-client="ca-pub-1426691684705792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="Scrips.js"></script>
     <title>Base Website Template</title>
 </head>
@@ -60,7 +61,7 @@
             "Unauthorized access is a potentially major problem for anyone who uses a computer or high-tech devices such as smartphones or tablets.
             The consequences for victims of these break-ins can include the loss of valuable data such as presentations, emails, and music.
             Victims may also have their bank account information, money, or even their identity stolen. Moreover, unauthorized users may use someone
-            else's computer to break the law, which could put the victim in legal trouble...""
+            else's computer to break the law, which could put the victim in legal trouble..."
         </p>
         <p>
             <a href="https://www.securedatarecovery.com/resources/the-importance-of-strong-secure-passwords">View Article</a>
